# Plataforma-VIDA

./: Arquivo_dados_controle_encoder.txt  README.md  ReadPot.cpp  ReadPot.h  SensorDatasRecord.txt  TesteThread  Velocidade_saida  WriteControl.cpp  arquivoPoten.txt  main.cpp  makefile  notas sobre controle.txt  raspi.cpp
Containers/: Gpio.cpp  Gpio.h  data_struct.h  general_defines.h  potentiometer_struct.h  shmem_struct.h  test_struct.h
Containers/Control/: Control.cpp  Control.h
Containers/Gpio/: Gpio.cpp  Gpio.h
Containers/Potentiometer/: Potentiometer.cpp  Potentiometer_struct.h  ads1115.h
Containers/ReadMem/: ReadMem.cpp
Containers/ReadPot/: Potentiometer.cpp  Potentiometer_struct.h  ReadPot.cpp  ReadPot.h
Containers/Steering/: Steering.cpp  Steering.h  Steering_struct.h
Containers/WriteAng/: WriteAng.cpp  WriteAng.h
Containers/WriteMem/: WriteMem.cpp  WriteMem.h
Containers/files/: shmem_struct.h
Containers/poten/: poten.cpp  poten.h  poten_struct.h
ExemploThread/Control/: Control.cpp  Control.h
ExemploThread/files/: control_struct.h  test_struct.h
Ros/bags/esquerdaDireita/: esquerdaDireita_0.db3  metadata.yaml
Ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Ros/install/control_pkg/lib/control_pkg/: control  record  sensors
Ros/install/control_pkg/share/ament_index/resource_index/package_run_dependencies/: control_pkg
Ros/install/control_pkg/share/control_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Ros/install/control_pkg/share/control_pkg/cmake/: control_pkgConfig.cmake
Ros/install/vida_bringup/share/ament_index/resource_index/package_run_dependencies/: vida_bringup
Ros/install/vida_bringup/share/ament_index/resource_index/parent_prefix_path/: vida_bringup
Ros/install/vida_bringup/share/vida_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Ros/install/vida_bringup/share/vida_bringup/cmake/: vida_bringupConfig-version.cmake  vida_bringupConfig.cmake
Ros/install/vida_bringup/share/vida_bringup/environment/: ament_prefix_path.dsv  path.dsv
Ros/install/vida_bringup/share/vida_bringup/launch/: plataforma_vida_app.launch.py
Ros/install/vida_interfaces/include/vida_interfaces/vida_interfaces/msg/: controls.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  sensor_datas.hpp
Ros/install/vida_interfaces/share/vida_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Ros/install/vida_interfaces/share/vida_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  export_vida_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_vida_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_vida_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_vida_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  vida_interfacesConfig.cmake  vida_interfaces__rosidl_typesupport_cExport.cmake  vida_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  vida_interfaces__rosidl_typesupport_cppExport.cmake  vida_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  vida_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake
Ros/log/: latest_build
Ros/src/control_pkg/: CMakeLists.txt  package.xml
Ros/src/control_pkg/src/Control/: Control.cpp  Control.h
Ros/src/control_pkg/src/Record/: Record.cpp  Record.h
Ros/src/control_pkg/src/Sensors/: Sensor.cpp  Sensors.cpp  Sensors.h
Ros/src/vida_bringup/: CMakeLists.txt
Ros/src/vida_bringup/launch/: plataforma_vida_app.launch.py
Ros/src/vida_interfaces/: CMakeLists.txt
Ros/src/vida_interfaces/msg/: SensorDatas.msg
Threads/src/: CMakeLists.txt  main.cpp
Threads/src/Containers/Control/: Control.cpp  Control.h
Threads/src/Containers/Encoder/: Encoder.cpp  Encoder.h
Threads/src/Containers/Record/: Record.cpp
Threads/src/Containers/Steering/: Steering.h
Threads/src/Files/: DefinePin.h
Threads/src/Utils/PosixShMem/: PosixShMem.h
Threads/src/Utils/Serial/: Serial.h
Threads/src/Utils/ThreadBase/: ThreadBase.cpp
Utils/Files/: DefinePin.h  Struct_sensors.h
Utils/PosixShMem/: PosixShMem.cpp  PosixShMem.h
Utils/Serial/: Serial.cpp  Serial.h
Utils/ThreadBase/: ThreadBase.h
arquivos excluidos/: arquivos excluídos
arquivos excluidos/Potentiometer/: Potentiometer.h
poten/: poten.cpp  poten.h  poten_struct.h
src/: CMakeLists.txt  README.md  main.cpp
src/Containers/: DefinePin.h
src/Containers/Control/: Control.cpp  Control.h  Control_Desc.cpp  M
src/Containers/Control/files/: control_struct.h  general_defines.h  shmem_struct.h  test_struct.h
src/Containers/Controle/: Controle.cpp  Controle.h  DefinePin.h
src/Containers/Encoder/ReadMem/: ReadMem.cpp  ReadMem.h  ReadMem_descomentado.cpp
src/Containers/Encoder/SetPoint/: SetPoint.cpp  SetPoint.h
src/Containers/Encoder/WriteMem/: M  WriteMem.cpp  WriteMem.h
src/Containers/Estecamento/PotenRead/: PotenRead.cpp  PotenRead.h
src/Containers/Estecamento/PotenWhrite/: PotenWhrite.cpp  PotenWhrite.h
src/Containers/Estecamento/Utils_poten/: poten_struct.h
src/Containers/Estecamento/poten/: poten.cpp  poten.h  poten_struct.h
src/Containers/ReadMem/: ReadMem.cpp  ReadMem.h
src/Containers/Record/: Record.h
src/Containers/Registro/: Registro.cpp  Registro.h
src/Containers/SerialCommunication/: Serial.cpp  Serial.h
src/Containers/Steering/: Steering.cpp
src/Containers/files/: control_struct.h  general_defines.h  usb_struct.h
src/Containers/poten/: poten.cpp
src/Files/: DefinePin.h  Struct_encoders.h
src/Utils/: road_time.h
src/Utils/PosixShMem/: PosixShMem.cpp  PosixShMem.h
src/Utils/Serial/: Serial.cpp  Serial.h
src/Utils/ThreadBase/: ThreadBase.cpp  ThreadBase.h
src/Utils/UDP/: UDP.cpp  UDP.h
(+25 files in other folders)
